istio-demo/mtls.yml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: mtls-demo
  namespace: istio
spec:
  mtls:
    mode: STRICT
