istio-demo/deploymentV1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-v1
  namespace: istio
  labels:
    app: nginx
    version: v1
spec:
  selector: 
    matchLabels:
      app: nginx 
      version: v1 
  template:
    metadata:
      labels:
        app: nginx 
        version: v1
    spec:
      containers:
        - name: nginx
          image: chaitanya305/good-morning
          ports:
            - containerPort: 80
